--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/png" href="/Logo_Page.png"/>
+    <link rel="icon" type="image/png" href="Logo_Page.png"/>
     <!-- add style -->
-    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
     <title>Profile | Jethro Ngo</title>
 </head>
@@ -15,7 +15,7 @@
     <div class="card" data-state="#about">
         <div class="card-header">
             <div class="card-cover"></div>
-            <img class="card-avatar" src="/avt.jpg" alt="avatar" />
+            <img class="card-avatar" src="avt.jpg" alt="avatar" />
             <h1 class="card-fullname">Ngo Nguyen Khac Minh</h1>
             <h2 class="card-jobtitle">Web Developer</h2>
         </div>
@@ -101,7 +101,7 @@
     </div>
 
     <!-- add style js -->
-    <script type="text/javascript" src="/main.js"></script>
+    <script type="text/javascript" src="main.js"></script>
 
 </body>
 </html>
